--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.5",
   "private": true,
   "scripts": {
-    "start": "node app.js",
+    "start": "nodemon app.js",
     "test": "mocha test"
   },
   "dependencies": {
@@ -14,9 +14,10 @@
     "express-session": "^1.0.4",
     "jade": "^1.3.1",
     "method-override": "^1.0.0",
+    "mongoose": "^4.6.6",
     "mongoskin": "^1.4.4",
     "morgan": "^1.0.1",
-    "serve-favicon": "^2.0.0",
+    "serve-favicon": "^2.3.0",
     "stylus": "^0.44.0"
   },
   "devDependencies": {
