--- a/package.json
+++ b/package.json
@@ -12,11 +12,10 @@
     "errorhandler": "^1.0.1",
     "express": "^4.1.2",
     "express-session": "^1.0.4",
-    "jade": "^1.3.1",
     "method-override": "^1.0.0",
     "mongoose": "^4.6.6",
-    "mongoskin": "^1.4.4",
-    "morgan": "^1.0.1",
+    "morgan": "^1.7.0",
+    "pug": "^2.0.0-beta6",
     "serve-favicon": "^2.3.0",
     "stylus": "^0.44.0"
   },
