--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cookie-parser": "^1.0.1",
     "errorhandler": "^1.0.1",
     "express": "^4.1.2",
+    "express-logger": "0.0.3",
     "express-session": "^1.0.4",
     "method-override": "^1.0.0",
     "mongoose": "^4.6.6",
