--- a/package.json
+++ b/package.json
@@ -9,16 +9,22 @@
   "dependencies": {
     "body-parser": "^1.0.2",
     "cookie-parser": "^1.0.1",
+    "dotenv": "^2.0.0",
     "errorhandler": "^1.0.1",
-    "express": "^4.1.2",
+    "express": "^4.14.0",
+    "express-jwt": "^5.1.0",
     "express-logger": "0.0.3",
     "express-session": "^1.0.4",
+    "jsonwebtoken": "^7.1.9",
     "method-override": "^1.0.0",
-    "mongoose": "^4.6.6",
+    "mongoose": "^4.6.8",
     "morgan": "^1.7.0",
+    "passport": "^0.3.2",
+    "passport-facebook": "^2.1.1",
+    "passport-google": "^0.3.0",
+    "passport-local": "^1.0.0",
     "pug": "^2.0.0-beta6",
-    "serve-favicon": "^2.3.0",
-    "stylus": "^0.44.0"
+    "serve-favicon": "^2.3.0"
   },
   "devDependencies": {
     "expect.js": "^0.2.0",
