--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "mocha test"
   },
   "dependencies": {
+    "bcrypt": "^0.8.7",
     "body-parser": "^1.0.2",
     "cookie-parser": "^1.0.1",
     "dotenv": "^2.0.0",
@@ -19,6 +20,7 @@
     "method-override": "^1.0.0",
     "mongoose": "^4.6.8",
     "morgan": "^1.7.0",
+    "multer": "^1.2.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "serve-favicon": "^2.3.0"
